--- a/pages_static/templates/pages_static/index.html
+++ b/pages_static/templates/pages_static/index.html
@@ -12,21 +12,21 @@
     <main>
       <section id="welcome-carousel">
         <div class="owl-carousel owl-fw-carousel owl-theme">
-          <div class="item overlay-container">
+          <div class="item overlay-container" style="width:auto">
             <img src="{%static 'pages_static/images/index/Rectangle 52.png' %}" alt="" />
             <div class="overlay-text text-white ms-5" style="top: 50%">
               <h1 class="mb-3">Exclusive Banarasi Silk Saree</h1>
               <button class="btn styled-btn-outline">Shop Now</button>
             </div>
           </div>
-          <div class="item overlay-container">
+          <div class="item overlay-container" style="width:auto">
             <img src="{%static 'pages_static/images/index/Rectangle 52.png' %}" alt="" />
             <div class="overlay-text text-white ms-5" style="top: 50%">
               <h1 class="mb-3">02 Exclusive Banarasi Silk Saree</h1>
               <button class="btn styled-btn-outline">Shop Now</button>
             </div>
           </div>
-          <div class="item overlay-container">
+          <div class="item overlay-container" style="width:auto">
             <img src="{%static 'pages_static/images/index/Rectangle 52.png' %}" alt="" />
             <div class="overlay-text text-white ms-5" style="top: 50%">
               <h1 class="mb-3">03 Exclusive Banarasi Silk Saree</h1>
@@ -123,7 +123,7 @@
                   src="{%static 'pages_static/images/index/Rectangle 63.png' %}"
                   alt=""
                 />
-                <h4 class="overlay-text text-white">Tissue Saree</h4>
+                <h4 class="overlay-text m-4 text-white">Tissue Saree</h4>
               </div>
             </div>
           </div>
@@ -177,60 +177,61 @@
               <button class="btn styled-btn-filled">Shop Now</button>
             </div>
           </div>
+        </div>
+      </section>
 
-          <section id="heirlooms" class="my-5 mx-auto">
-            <div class="container-md">
-              <h1 class="text-center mb-5 text-sp-red">WOVEN HEIRLOOMS</h1>
-              <p>
-                Panaya GOLD is a luxury handmade textile brand, started in 2015.
-                Since its inception, it has been committed to preserving and
-                innovating with the highest levels of artistry and hand
-                craftsmanship in Banaras. Its single edition sarees are
-                contemporary heirlooms for today’s connoisseurs. Each
-                One-of-a-Kind saree is handwoven over several months,
-                benchmarking excellence in quality of materials and design which
-                attempt to match historical masterpieces, ensuring
-                simultaneously, comfort for today’s wearer.
-              </p>
-              <div class="container-fluid">
-                <div class="row g-2 row-cols-2">
-                  <div class="col">
-                    <img
-                      class="img-fluid"
-                      src="{%static 'pages_static/images/index/Rectangle 72.png' %}"
-                      alt=""
-                    />
-                  </div>
-                  <div class="col">
-                    <!-- <div class="row"> -->
-                    <img
-                      style="display: block"
-                      src="{%static 'pages_static/images/index/Rectangle 73.png' %}"
-                      alt=""
-                      class="pb-2 img-fluid"
-                    />
-                    <!-- </div> -->
-                    <!-- <div class="row"> -->
-                    <img
-                      style="display: block"
-                      src="{%static 'pages_static/images/index/Rectangle 74.png' %}"
-                      alt=""
-                      class="img-fluid"
-                    />
-                    <!-- </div> -->
-                  </div>
-                </div>
+      <section id="heirlooms" class="my-5 mx-auto">
+        <div class="container-md">
+          <h1 class="text-center mb-5 text-sp-red">WOVEN HEIRLOOMS</h1>
+          <p>
+            Panaya GOLD is a luxury handmade textile brand, started in 2015.
+            Since its inception, it has been committed to preserving and
+            innovating with the highest levels of artistry and hand
+            craftsmanship in Banaras. Its single edition sarees are
+            contemporary heirlooms for today’s connoisseurs. Each
+            One-of-a-Kind saree is handwoven over several months,
+            benchmarking excellence in quality of materials and design which
+            attempt to match historical masterpieces, ensuring
+            simultaneously, comfort for today’s wearer.
+          </p>
+          <div class="container-fluid">
+            <div class="row g-2 row-cols-2 justify-content-center">
+              <div class="col-auto">
+                <img
+                  class="img-fluid"
+                  src="{%static 'pages_static/images/index/Rectangle 72.png' %}"
+                  alt=""
+                />
+              </div>
+              <div class="col-auto">
+                <!-- <div class="row"> -->
+                <img
+                  style="display: block"
+                  src="{%static 'pages_static/images/index/Rectangle 73.png' %}"
+                  alt=""
+                  class="pb-2 img-fluid"
+                />
+                <!-- </div> -->
+                <!-- <div class="row"> -->
+                <img
+                  style="display: block"
+                  src="{%static 'pages_static/images/index/Rectangle 74.png' %}"
+                  alt=""
+                  class="img-fluid"
+                />
+                <!-- </div> -->
               </div>
             </div>
-          </section>
-          <section class="text-center my-5">
-            <h1 class="mb-5">"Handwoven stories written in eternal Banaras"</h1>
-            <p class="">
-              Each Panaya product has been made by the hands of a dedicated,
-              trained artisan, with skills passed down through generations.
-            </p>
-          </section>
+          </div>
         </div>
+      </section>
+      
+      <section class="text-center my-5">
+        <h1 class="mb-5">"Handwoven stories written in eternal Banaras"</h1>
+        <p class="">
+          Each Panaya product has been made by the hands of a dedicated,
+          trained artisan, with skills passed down through generations.
+        </p>
       </section>
 
       <section
