--- a/pages_static/static/pages_static/css/styles.scss
+++ b/pages_static/static/pages_static/css/styles.scss
@@ -89,8 +89,8 @@
 
 .overlay-container {
   position: relative;
-  // height: fit-content;
-  // width: fit-content;
+  height: fit-content;
+  width: fit-content;
 
   .overlay-text {
     position: absolute;
@@ -174,6 +174,6 @@
   width: 100vw;
   background-image: url("/static/pages_static/images/index/heirloom-bg.png");
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: cover;
   background-position: 0%;
 }
