--- a/blogs/templates/blog_post.html
+++ b/blogs/templates/blog_post.html
@@ -4,117 +4,134 @@
 {% block title %}Blog | {{blog.title|truncatewords:10}}{% endblock %}
 
 {% block css %}
-<link rel="stylesheet" href="{% static 'pages_static/css/about.css' %}">
+<link rel="stylesheet" href="{% static 'blogs/blogs.css' %}">
 {% endblock css %}
 
 {% block body %}
 <section class='story'>
     <div class="align-center section-heading">
-        <img src="./assets/img/section-heading-decor.png" alt="" />
+        <img src="{% static 'pages_static/images/section-heading-decor.png'%}" alt="" />
         <h2>Blogs</h2>
-        <img class="flip-horizontal" src="./assets/img/section-heading-decor.png" alt="" />
+        <img class="flip-horizontal" src="{% static 'pages_static/images/section-heading-decor.png'%}" alt="" />
     </div>
 </section>
-<section id='post' class='align-center story'>
+
+<section id='post' class='story container-md mx-auto'>
     <div class='row'>
-        <h1 class='col-12'>{{blog.title}}</h1>
-        <h5 class='col-12'>{{blog.author|upper}} . {{blog.date|timesince}} ago</h5>
-        <div id='blog-image' class='col-12'>
-            <img src="./assets/img/about/blog1.png" alt="">
-        </div>
+        <h1 class='col-12 align-center'>{{blog.title}}</h1>
+        <h5 class='col-12 text-muted align-center'>{{blog.author|upper}} . {{blog.date|timesince}} ago</h5>
         <div class='text col-12' id='blog-text'>
-            <p>
-                {{blog.content|safe}}
-            </p>
+            {{blog.content|safe}}
         </div>
-    </div>
-    <div id='blog-like-comment-post'>
-        <div id='blog-like-comment'>
-            <!-- Like icon -->
-            <a blogid="{{blog.id}}" class="col-auto disabled me-2" href="{% url 'blog_like' blog.id %}"><i
-                    class="fs-3 far fa-thumbs-up" aria-hidden="true"></i></a>
+        <div class="col-12">
+            <div id='blog-like-comment-post'>
+                <div id='blog-like-comment'>
+                    <!-- Like icon -->
+                    <a blogid="{{blog.id}}" class="col-auto disabled me-2" href="{% url 'blog_like' blog.id %}"><i
+                            class="fs-3 far fa-thumbs-up" aria-hidden="true"></i></a>
 
-            <!-- Comment icon -->
-            <div id="comment-button" style="cursor:pointer">
-                <svg id='comment-button' class='heart-icons' xmlns="http://www.w3.org/2000/svg" width="30" height="30"
-                    fill="currentColor" class="bi bi-chat-dots" viewBox="0 0 16 16">
-                    <path
-                        d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
-                    <path
-                        d="m2.165 15.803.02-.004c1.83-.363 2.948-.842 3.468-1.105A9.06 9.06 0 0 0 8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6a10.437 10.437 0 0 1-.524 2.318l-.003.011a10.722 10.722 0 0 1-.244.637c-.079.186.074.394.273.362a21.673 21.673 0 0 0 .693-.125zm.8-3.108a1 1 0 0 0-.287-.801C1.618 10.83 1 9.468 1 8c0-3.192 3.004-6 7-6s7 2.808 7 6c0 3.193-3.004 6-7 6a8.06 8.06 0 0 1-2.088-.272 1 1 0 0 0-.711.074c-.387.196-1.24.57-2.634.893a10.97 10.97 0 0 0 .398-2z" />
-                </svg>
+                    {% comment %} <!-- Comment icon -->
+                    <div id="comment-button" style="cursor:pointer">
+                        <svg id='comment-button' class='heart-icons' xmlns="http://www.w3.org/2000/svg" width="30"
+                            height="30" fill="currentColor" class="bi bi-chat-dots" viewBox="0 0 16 16">
+                            <path
+                                d="M5 8a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm3 1a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
+                            <path
+                                d="m2.165 15.803.02-.004c1.83-.363 2.948-.842 3.468-1.105A9.06 9.06 0 0 0 8 15c4.418 0 8-3.134 8-7s-3.582-7-8-7-8 3.134-8 7c0 1.76.743 3.37 1.97 4.6a10.437 10.437 0 0 1-.524 2.318l-.003.011a10.722 10.722 0 0 1-.244.637c-.079.186.074.394.273.362a21.673 21.673 0 0 0 .693-.125zm.8-3.108a1 1 0 0 0-.287-.801C1.618 10.83 1 9.468 1 8c0-3.192 3.004-6 7-6s7 2.808 7 6c0 3.193-3.004 6-7 6a8.06 8.06 0 0 1-2.088-.272 1 1 0 0 0-.711.074c-.387.196-1.24.57-2.634.893a10.97 10.97 0 0 0 .398-2z" />
+                        </svg>
+                    </div>
+                </div>
+                <div id='post-button'>
+
+                </div> {% endcomment %}
             </div>
         </div>
-        <div id='post-button'>
+    </div>
 
+</section>
+
+<!-- Comments section -->
+<section class="container mt-5">
+    <div class="row d-flex justify-content-center">
+        <div class="col-md-8">
+
+            <div class="headings d-flex justify-content-between align-items-center mb-3">
+                <h5>Comments</h5>
+            </div>
+
+            {% for comment in comments %}
+            <div class="card p-3 my-2 comment">
+                <div class="d-flex justify-content-between align-items-center">
+                    <span>
+                        <small class="font-weight-bold text-primary">{{comment.mail}}</small>
+                        <small class="font-weight-bold">{{comment.comment | safe}}</small></span>
+                </div> <small class="text-muted">{{comment.timestamp | timesince}} ago</small>
+            </div>
+            {% endfor %}
+
+            <form action="{% url 'comments' blog.id %}" method="post">
+                {% csrf_token %}
+                <div class="row">
+                    <div class="col-auto my-1">
+                        <input type="text" class="form-control" name="mail" placeholder="enter your mail">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-auto my-1">
+                        <textarea type="text" class="form-control" name="comment"
+                            placeholder="enter your comment"></textarea>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-auto my-1">
+                        <input type="submit" class="btn btn-primary styled-btn" value="Submit">
+                    </div>
+                </div>
+            </form>
         </div>
     </div>
 </section>
-<section class='story container'>
-    <div id='write-comment'>
-    </div>
-    <div class='align-items' id='all-comments-wrapper'>
-        <!-- Comments -->
-    </div>
-</section>
-<section class='story container align-items' id='other-blogs'>
-    <div class='row'>
-        {% comment %} <div class='col-lg-3 col-md-6 other-blogs'>
-            <div class='other-blogs-wrapper'>
-                <img src="./assets/img/about/blog1.png" alt="">
-                <div class='other-blogs-text-wrapper rounded-3'>
-                    <div class="title">Singhanis - Celebrity Blog</div>
-                    <div class='date-view'>
-                        <div class='date'>August 10, 2021</div>
-                        <div class='other-blogs-views'>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-eye" viewBox="0 0 16 16">
-                                <path
-                                    d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z" />
-                                <path
-                                    d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z" />
-                            </svg>
-                            10
-                        </div>
+
+{% comment %} other blogs {% endcomment %}
+<section id="blogs" class="my-5">
+    <div class="container-lg">
+        <div class="row g-2 row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 justify-content-center">
+            {% comment %} <div class="col">
+                <div class="card mx-auto" style="max-width: 20rem;">
+                    <img src="{%static 'pages_static/images/index/Rectangle 79.png' %}" class="card-img-top"
+                        alt="..." />
+                    <div class="card-body">
+                        <h5 class="card-title">Singhanias - Celebrity Blog</h5>
+                        <p>August 20, 2021</p>
+                        <p class="card-text">
+                            Sailesh Singhanias is an iconic part of the tinsel world as
+                            celebrities breathe style in every l...Continue Reading
+                        </p>
                     </div>
-                    <div class='other-blogs-text'>
-                        Sailesh Singhanias is an iconic part of the tinsel world as celeb breathe style in every!
-                        ...<button class='btn btn-outline-light blog-read-button'><strong>Continue
-                                Reading</strong></button>
+                </div>
+            </div> {% endcomment %}
+            {% for blog in blogs %}
+            <div class="col">
+                <div class="card mx-auto" style="max-width: 20rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">{{blog.title}}</h5>
+                        <div class="text-muted d-flex justify-content-between">
+                            <p class="text-muted">{{blog.date | timesince}} ago</p>
+                            <p> <i class="far fa-eye"></i> {{blog.views}}</p>
+                        </div>
+                        <div class="card-text" style="max-height:20rem; overflow:hidden">
+                            {{blog.content|safe}}
+                        </div>
+                        <a href="{% url 'blog' blog.id %}">... Continue Reading</a>
+
                     </div>
                 </div>
             </div>
-        </div> {% endcomment %}
-        {% for blog in blogs %}
-        <div class='col-lg-3 col-md-6 other-blogs'>
-            <div class="other-blogs-wrapper">
-                <img src="./assets/img/about/blog3.png" alt="">
-                <div class='other-blogs-text-wrapper rounded-3'>
-                    <div class="title">{{blog.title}}</div>
-                    <div class='date-view'>
-                        <div class='date'>{{blog.date|timesince}}</div>
-                        <div class='other-blogs-views'>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                                class="bi bi-eye" viewBox="0 0 16 16">
-                                <path
-                                    d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z" />
-                                <path
-                                    d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z" />
-                            </svg>
-                            10
-                        </div>
-                    </div>
-                    <div class='other-blogs-text'>
-                        {{blog.content|truncatewords:30|safe}} ... <a href="{% url 'blog' blog.id %}"> <button
-                                class='btn btn-outline-light blog-read-button'><strong>Continue
-                                    Reading</strong></button></a>
-                    </div>
-                </div>
-            </div>
+            {% endfor %}
         </div>
-        {% endfor %}
     </div>
 </section>
+
 <script>
     function addCommentBox() {
         var commentBox = document.getElementById('write-comment');
@@ -134,7 +151,7 @@
     };
 
     document.addEventListener('DOMContentLoaded', function () {
-        
+
         // var likeButton = document.getElementById('like-button');
         // likeButton.addEventListener('click', function () {
         //     window.lb = likeButton;
