--- a/user_manager/templates/user_manager/signup.html
+++ b/user_manager/templates/user_manager/signup.html
@@ -1,56 +1,54 @@
-<!-- Dummy file for signup -->
+{% extends 'base_user.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign in</title>
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-   <link href="{% static 'user_manager/css/styles.css' %}" rel="stylesheet">
-    
-</head>
-<body>
-    <div class="container">
-        <img src="{% static 'user_manager/images/crown.png' %}">
-        <h1>PANAYA</h1>
-    </div>
-    <div class="sign-in-form">
-        <form method='post'>
-            {% csrf_token %}
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="text" name="email" id="email" class="form-control" placeholder="Email">
-            </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" name="password" id="password" class="form-control" placeholder="Password">
-            </div>
-            <div class="form-group">
-                <label for="password2">Again Password</label>
-                <input type="password" name="password2" id="password2" class="form-control" placeholder="Password">
-            </div>
-            <div class="form-group">
-                <label for="first_name">First Name</label>
-                <input type="text" name="first_name" id="first_name" class="form-control" placeholder="First Name">    
-            </div>
-            <div class="form-group">
-                <label for="last_name">Last Name</label>
-                <input type="text" name="last_name" id="last_name" class="form-control" placeholder="Last Name">
-            </div>
-            <div class="form-group">
-                <label for="phone">Phone</label>
-                <input type="text" name="phone" id="phone" class="form-control" placeholder="Phone">
-            </div>
-            <div class='form-group'>
-                <label for="date_of_birth">Date of Birth</label>
-                <input type="date" name="date_of_birth" id="date_of_birth" class="form-control" placeholder="Date of Birth">
-            </div>
-            <div class="form-group">
-                <input type="submit" name="submit" value="Sign in" class="btn btn-primary">
-            </div>
-        </form>
-    </div>
-</body>
-</html>
+
+
+{% block title %}
+Sign-up
+{% endblock title %}
+
+{% block body %}
+
+<div class="sign-in-form">
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+    <form method='post'>
+        {% csrf_token %}
+        <h1>Sign in</h1>
+        <p>Already a user? <a href="{% url 'login' %}">Log-in here</a></p>
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="text" class='entry' name="email" id="email" class="form-control" placeholder="Email">
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class='entry' name="password" id="password" class="form-control" placeholder="Password">
+        </div>
+        <div class="form-group">
+            <label for="password2">Again Password</label>
+            <input type="password" class='entry' name="password2" id="password2" class="form-control" placeholder="Password">
+        </div>
+        <div class="form-group">
+            <label for="first_name">First Name</label>
+            <input type="text" class='entry' name="first_name" id="first_name" class="form-control" placeholder="First Name">    
+        </div>
+        <div class="form-group">
+            <label for="last_name">Last Name</label>
+            <input type="text" class='entry' name="last_name" id="last_name" class="form-control" placeholder="Last Name">
+        </div>
+        <div class="form-group">
+            <label for="phone">Phone</label>
+            <input type="text" class='entry' name="phone" id="phone" class="form-control" placeholder="Phone">
+        </div>
+        <div class='form-group'>
+            <label for="date_of_birth">Date of Birth</label>
+            <input type="date" class='entry' name="date_of_birth" id="date_of_birth" class="form-control" placeholder="Date of Birth">
+        </div>
+        <button type="submit" class="continue">Continue</button>
+    </form>
+</div>
+{% endblock body %}
