--- a/pages_static/templates/base.html
+++ b/pages_static/templates/base.html
@@ -10,7 +10,9 @@
     <title> {% block title %} Home {% endblock title %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    {% block css %}{% endblock css %}
+    {% comment %} <link rel="stylesheet" href="{% static 'pages_static/css/about.css' %}"> {% endcomment %}
+    <link rel="stylesheet" href="{% static 'pages_static/css/styles.css' %}">
+        {% block css %}{% endblock css %}
 </head>
 
 <body>
