--- a/product/templates/product/list.html
+++ b/product/templates/product/list.html
@@ -1,37 +1,158 @@
-{% extends 'base_product.html' %}
+{% extends 'base.html' %}
 {% load static %}
 {% block title %}
-    {% if category %}
-        {{ category.name }}
-    {% else %}
-        Products
-    {% endif %}
+{% if category %}
+{{ category.name }}
+{% else %}
+Products
+{% endif %}
 {% endblock title %}
 
+{% block css %}
+<link rel="stylesheet" href="{% static 'products/css/shop.css' %}">
+{% endblock css %}
+
 {% block body %}
-    <div id="sidebar">
-        <h3>Categories</h3>
-        <ul>
-            <li {% if not category %}class="selected"{% endif %}>
-                <a href="{% url "product_list" %}">All</a>
-            </li>
-            {% for c in categories %}
-                <li {% if category.slug == c.slug %}class="selected"{% endif %}>
-                    <a href="{{ c.get_absolute_url }}">{{ c.name }}</a>
-                </li>
-            {% endfor %}
-        </ul>
-    </div>
-    <div id="main" class="product-list">
-        <h1>{% if category %}{{ category.name }}{% else %}Products{% endif %}</h1>
-        {% for product in products %}
-            <div class="item">
-                <a href="{{ product.get_absolute_url }}">
-                </a>
-                <a href="{{ product.get_absolute_url }}">{{ product.name }}</a>
-                <br>
-                &#8377;{{ product.price }}
+<section id="carousel">
+    <div id="carouselShopIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselShopIndicators" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselShopIndicators" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselShopIndicators" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="overlay-container">
+                    <img src="{% static 'products/img/Rectangle 120.png' %}" class="d-block w-100"
+                        alt="product image" />
+                    <p class="overlay-text text-white fs-1 overlay-center" style="height: fit-content">
+                        Banarasi Silk Saree
+                    </p>
+                </div>
             </div>
-        {% endfor %}
+            <div class="carousel-item">
+                <div class="overlay-container">
+                    <img src="{% static 'products/img/Rectangle 120.png' %}" class="d-block w-100"
+                        alt="product image" />
+                    <p class="overlay-text text-white fs-1 overlay-center" style="height: fit-content">
+                        Banarasi Silk Saree
+                    </p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="overlay-container">
+                    <img src="{% static 'products/img/Rectangle 120.png' %}" class="d-block w-100"
+                        alt="product image" />
+                    <p class="overlay-text text-white fs-1 overlay-center" style="height: fit-content">
+                        Banarasi Silk Saree
+                    </p>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselShopIndicators"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselShopIndicators"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
     </div>
+</section>
+
+<section id="heading" class="section-heading">
+    <img src="{% static 'pages_static/images/section-heading-decor.png' %}" alt="" />
+    <h1>Shop</h1>
+    <img class="flip-horizontal" src="{% static 'pages_static/images/section-heading-decor.png' %}" alt="" />
+</section>
+
+<section id="products">
+    <div class="container-lg mt-5">
+        <div class="row">
+            <div class="col-md-auto">
+                <p class="fs-4">
+                    Showing <span class="fw-bold">100</span> results for saree
+                </p>
+            </div>
+            <div class="col-md"></div>
+            <div class="col-md-auto fs-4">
+                <i class="fa fa-filter cursor-pointer me-2"></i>
+                <i class="fa fa-th cursor-pointer me-2"></i>
+                <i class="fa fa-list cursor-pointer text-muted"></i>
+            </div>
+        </div>
+        <div class="mt-2 row g-2 g-md-5 row-cols-1 row-cols-md-2 row-cols-lg-3">
+            {% comment %} <div class="col mt-0">
+                <div class="overlay-container">
+                    <img loading="lazy" class="" style="width: 100%" src="/assets/img/index/Rectangle 68.png" alt="" />
+                    <div class="overlay-shopnow">
+                        <button class="btn overlay-bottom overlay-shopnow-btn">
+                            Shop Now
+                        </button>
+                    </div>
+                </div>
+                <h2 class="mt-2 fs-5">Banarasi Silk Saree</h2>
+                <p class="fs-5 fw-bold">Rs. 4500</p>
+            </div> {% endcomment %}
+            {% for product in products %}
+            <div class="col mt-0">
+                <div class="overlay-container">
+                    <img loading="lazy" class="" style="width: 100%" src="{{product.get_primary_img }}" alt="" />
+                    <div class="overlay-shopnow">
+                        <a href="{{ product.get_absolute_url }}">
+                            <button class="btn overlay-bottom overlay-shopnow-btn">
+                                Shop Now
+                            </button>
+                        </a>
+                    </div>
+                </div>
+                <h2 class="mt-2 fs-5">{{product.name}}</h2>
+                <p class="fs-5 fw-bold">Rs. {{product.price}}</p>
+            </div>
+            {% endfor %}
+
+        </div>
+        <div class="rom mt-2 text-center">
+            <nav aria-label="Page navigation">
+                <ul class="pagination">
+                    <li class="page-item"><a class="page-link" href="#">1</a></li>
+                    <li class="page-item">
+                        <a class="page-link active" href="#">2</a>
+                    </li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+</section>
 {% endblock %}
+{% comment %} <div id="sidebar">
+    <h3>Categories</h3>
+    <ul>
+        <li {% if not category %}class="selected" {% endif %}>
+            <a href="{% url "product_list" %}">All</a>
+        </li>
+        {% for c in categories %}
+        <li {% if category.slug == c.slug %}class="selected" {% endif %}>
+            <a href="{{ c.get_absolute_url }}">{{ c.name }}</a>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
+<div id="main" class="product-list">
+    <h1>{% if category %}{{ category.name }}{% else %}Products{% endif %}</h1>
+    {% for product in products %}
+    <div class="item">
+        <a href="{{ product.get_absolute_url }}">
+        </a>
+        <a href="{{ product.get_absolute_url }}">{{ product.name }}</a>
+        <br>
+        &#8377;{{ product.price }}
+    </div>
+    {% endfor %}
+</div> {% endcomment %}
