--- a/pages_static/static/pages_static/css/styles.scss
+++ b/pages_static/static/pages_static/css/styles.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Corinthia:wght@700&display=swap');
+
 // common utilities
 .styled-btn-outline {
   border: 4px solid #ffce76;
@@ -69,9 +72,11 @@
 
 .stars {
   display: flex;
+
   .stars-pos {
     color: #5ac705;
   }
+
   .stars-neg {
     color: #f0f0f0;
   }
@@ -111,6 +116,7 @@
     transform: translate(-50%, -100%);
     // margin-bottom: 1rem;
   }
+
   // top: 50%;
 }
 
@@ -120,13 +126,12 @@
   position: absolute;
   top: 0;
   left: 0;
-  background: linear-gradient(
-    180deg,
-    rgba(255, 255, 255, 0) 0%,
-    rgba(255, 255, 255, 0) 50%,
-    rgba(141, 0, 32, 0.7) 97%,
-    rgba(141, 0, 32, 0.9) 100%
-  );
+  background: linear-gradient(180deg,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(255, 255, 255, 0) 50%,
+      rgba(141, 0, 32, 0.7) 97%,
+      rgba(141, 0, 32, 0.9) 100%);
+
   .overlay-shopnow-btn {
     background: #ffce76;
     border-radius: 6.336px;
@@ -143,6 +148,7 @@
 .pagination {
   align-items: center;
   justify-content: center;
+
   .page-link {
     color: grey;
     border: none;
@@ -154,6 +160,99 @@
     color: #8d0020;
     font-size: 2.2rem;
   }
+}
+
+// header
+/* Header Part */
+header {
+  background: url('/static/pages_static/images/about/nav bg.png');
+  color: #fff;
+  padding: 20px;
+  font-size: 1.2rem;
+
+  #nav {
+    padding-bottom: 0;
+  }
+
+  nav a {
+    text-decoration: none;
+    color: #ffe65c;
+    padding: 0 9%;
+    margin-bottom: 1%;
+    margin-top: 7%;
+  }
+
+  nav div {
+    width: 33%;
+    display: flex;
+    margin: 0 10px;
+  }
+
+}
+
+/* Footer */
+footer {
+  background: #8D0020;
+  color: #FFCE76;
+  padding: 3%;
+
+  a {
+    text-decoration: none;
+    color: #FFCE76;
+  }
+
+  .footer-left {
+    margin-top: 11%;
+    padding: 1%;
+  }
+
+  .icons {
+    height: 20px;
+    width: 20px;
+  }
+
+  .footer-about {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 0;
+  }
+}
+
+header,
+footer {
+
+  .middle {
+    color: #FFCE76;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    h2 {
+      color: #FFCE76;
+      font-family: 'Playfair Display', serif;
+      font-size: 3.5rem;
+    }
+
+    p {
+      font-family: 'Corinthia', cursive;
+      font-size: 1.5rem;
+    }
+  }
+
+  h2 {
+    color: #FFCE76;
+  }
+
+  a:hover {
+    color: rgb(224, 188, 27);
+  }
+}
+
+
+.btn-warning {
+  color: #8D0020;
+  background-color: #FFCE76;
 }
 
 // specifice styles
