--- a/product/static/products/css/product.css
+++ b/product/static/products/css/product.css
@@ -19,6 +19,7 @@ body {
   background-size: 50%;
   background-position-x: 0%;
   background-position-y: 100%;
+  max-width: 100vw;
 }
 
 #pop .cart {
