--- a/product/templates/product/detail.html
+++ b/product/templates/product/detail.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %} {% load static %} {% block title %} {{ product.name }}
 {% endblock title %} {% block css %}
 <link rel="stylesheet" href="{% static 'products/css/product.css' %}" />
-{% endblock css %} {% block body %}
+{% endblock css %} 
+{% block body %}
+
 <section id="heading" class="section-heading">
   <img
     src="{% static 'pages_static/images/section-heading-decor.png' %}"
@@ -328,7 +330,10 @@
     cart = new Cart();
   });
 </script>
-{% endblock js %} {% comment %}
+{% endblock js %} 
+
+
+{% comment %} 
 <div class="product-detail">
   <h1>{{ product.name }}</h1>
   <h2>
@@ -343,4 +348,4 @@
   </form>
   {{ product.description|linebreaks }}
 </div>
-{% endcomment %}
+{% endblock %} {% endcomment %}
