--- a/product/templates/product/list.html
+++ b/product/templates/product/list.html
@@ -75,7 +75,7 @@ Products
     <div class="container-lg mt-5">
         <div class="row">
             <div class="col-md-auto">
-                <form action="search" method="POST">
+                <form action="/shop/search" method="POST" id="search-form">
                     {% csrf_token %}
                     <div class="row justify-content-center">
                         <div class="col-auto d-flex align-items-center">
@@ -85,7 +85,7 @@ Products
                         <div class="col-auto d-flex align-items-center">
                             <select name="category" value="{{formdata.category}}" class="form-select"
                                 aria-label="Category select">
-                                <option value="" {% if '' == formdata.category %}selected="selected"{% endif %}>category all</option>
+                                <option value="0" {% if '' == formdata.category %}selected="selected"{% endif %}>category all</option>
                                 {% for categorie in categories %}
                                     {% if categorie.id|stringformat:"i" == formdata.category %}
                                         <option 
@@ -134,11 +134,11 @@ Products
                 </form>
             </div>
             <div class="col-md"></div>
-            <div class="col-md-auto fs-4">
+            {% comment %} <div class="col-md-auto fs-4">
                 <i class="fa fa-filter cursor-pointer me-2"></i>
                 <i class="fa fa-th cursor-pointer me-2"></i>
                 <i class="fa fa-list cursor-pointer text-muted"></i>
-            </div>
+            </div> {% endcomment %}
         </div>
     </div>
 </section>
@@ -179,21 +179,36 @@ Products
             {% endfor %}
 
         </div>
+        {% if number_pages %}
         <div class="rom mt-2 text-center">
             <nav aria-label="Page navigation">
                 <ul class="pagination">
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item">
-                        <a class="page-link active" href="#">2</a>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                    {% for _ in ''|center:number_pages %}
+                    {% if current_page_number == forloop.counter %}
+                    <li class="page-item"><a class="page-link active" onClick="pagination(event)" data-href={{forloop.counter}}>{{forloop.counter}}</a></li>
+                    {% else %}
+                    <li class="page-item"><a class="page-link" onClick="pagination(event)" data-href={{forloop.counter}}>{{forloop.counter}}</a></li>
+                    {% endif %}
+                    {% endfor %}
+                    {% comment %} <li class="page-item"><a class="page-link" href="#">3</a></li> {% endcomment %}
                 </ul>
             </nav>
         </div>
+        {% endif %}
     </div>
 </section>
 {% endblock %}
 {% block js %}
+<script>
+let pagination = (e)=>{
+    e.preventDefault();
+    let pageN = e.target.dataset.href;
+    let searchForm = document.getElementById('search-form');
+    searchForm.action = '/shop/search/'+pageN
+    // console.log(searchForm)
+    searchForm.submit()
+}
+</script>
 {% endblock js %}
 {% comment %} <div id="sidebar">
     <h3>Categories</h3>
