--- a/pages_static/templates/base.html
+++ b/pages_static/templates/base.html
@@ -36,7 +36,9 @@
             </div>
         </nav>
     </header>
-    {% block body %}{% endblock body %}
+    <main id="main-container">
+        {% block body %}{% endblock body %}
+    </main>
     <footer>
         <div class='container'>
             <div class='row'>
